<resources>
    <string name="app_name">Family Todo</string>
    <string name="add_item_title">Add an item to the todo list</string>
    <string name="ok">OK</string>
    <string name="setup">Setup</string>
    <string name="user_name">User name</string>
    <string name="todo_server_url">Todo server URL</string>
    <string name="todo_item_description">Todo Item Description</string>
    <string name="add_item">Add</string>
    <string name="clean_list">Clean</string>
    <string name="prioritize">Order</string>
    <string name="refresh">Refresh</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="worker">Worker</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
</resources>
